fix a photos gap display bug

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -263,7 +263,7 @@ nav a.active::after {
 .masonry-grid {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-auto-rows: 8px;
+    grid-auto-rows: 1px;
     gap: 20px;
 }
 
@@ -282,6 +282,10 @@ nav a.active::after {
     border-radius: 8px;
     display: block;
     vertical-align: top;
+}
+
+.gallery-item a {
+    display: block;
 }
 
 .gallery-item.is-visible {
